--- a/src/html/includes/header.html
+++ b/src/html/includes/header.html
@@ -152,26 +152,158 @@
               <a href=""
                  class="catalog-menu__link">Кухни</a>
             </li>
-
-          </ul>
-
-          <button type="button" data-js="toggle-sale-menu"
-                  class="header__sale-btn menu-sale-btn">Распродажа <span></span></button>
-          <ul class="header__sale-menu sale-menu list--clear">
-            <li class="sale-menu__item">
+            <li class="catalog-menu__item">
               <a href=""
-                 class="sale-menu__link">
-                <svg class="sale-menu__icon"></svg>
-                Коллекции
-              </a>
-              <ul class="sale-menu__sub sale-sub-menu list--clear">
-                <li class="sale-sub-menu__item">
-                  <a href=""
-                     class="sale-sub-menu__link">Коллекции </a>
-                </li>
-              </ul>
+                 class="catalog-menu__link catalog-menu__link--sale">Распродажа</a>
             </li>
+
           </ul>
+
+          <button type="button" data-js="toggle-big-catalog-menu"
+                  class="header__sale-btn menu-sale-btn"><span></span></button>
+          <div class="header__big-catalog-menu-wrapper">
+            <ul class="header__big-catalog-menu big-catalog-menu list--clear">
+              <li class="big-catalog-menu__item">
+                <a href=""
+                   class="big-catalog-menu__link">
+
+                  <svg class="big-catalog-menu__icon"
+                       width="20"
+                       height="20">
+                    <use xlink:href="img/spritemap.svg#sprite-big-catalog-menu-1"></use>
+                  </svg>
+                  Коллекции
+                </a>
+                <ul class="big-catalog-menu__sub big-catalog-sub-menu list--clear">
+                  <li class="big-catalog-sub-menu__item"><a href="" class="big-catalog-sub-menu__link">Серия Верди</a></li>
+                  <li class="big-catalog-sub-menu__item"><a href="" class="big-catalog-sub-menu__link">Серия Элбург</a></li>
+                  <li class="big-catalog-sub-menu__item"><a href="" class="big-catalog-sub-menu__link">Серия Паола</a></li>
+                  <li class="big-catalog-sub-menu__item"><a href="" class="big-catalog-sub-menu__link">Серия Авиньон</a></li>
+                  <li class="big-catalog-sub-menu__item"><a href="" class="big-catalog-sub-menu__link">Серия Венето</a></li>
+                  <li class="big-catalog-sub-menu__item"><a href="" class="big-catalog-sub-menu__link">Серия Британия</a></li>
+                  <li class="big-catalog-sub-menu__item"><a href="" class="big-catalog-sub-menu__link">Серия Милана</a></li>
+                  <li class="big-catalog-sub-menu__item"><a href="" class="big-catalog-sub-menu__link">Серия OKAERI</a></li>
+                  <li class="big-catalog-sub-menu__item"><a href="" class="big-catalog-sub-menu__link">Серия LIRONA</a></li>
+                  <li class="big-catalog-sub-menu__item"><a href="" class="big-catalog-sub-menu__link">Серия LAURA</a></li>
+                  <li class="big-catalog-sub-menu__item"><a href="" class="big-catalog-sub-menu__link">Серия Мальта</a></li>
+                  <li class="big-catalog-sub-menu__item"><a href="" class="big-catalog-sub-menu__link">Серия Бали</a></li>
+                </ul>
+              </li>
+            </ul>
+            <ul class="header__big-catalog-menu big-catalog-menu list--clear">
+              <li class="big-catalog-menu__item">
+                <a href=""
+                   class="big-catalog-menu__link">
+
+                  <svg class="big-catalog-menu__icon"
+                       width="20"
+                       height="20">
+                    <use xlink:href="img/spritemap.svg#sprite-big-catalog-menu-1"></use>
+                  </svg>
+                  Коллекции
+                </a>
+                <ul class="big-catalog-menu__sub big-catalog-sub-menu list--clear">
+                  <li class="big-catalog-sub-menu__item"><a href="" class="big-catalog-sub-menu__link">Серия Верди</a></li>
+                  <li class="big-catalog-sub-menu__item"><a href="" class="big-catalog-sub-menu__link">Серия Элбург</a></li>
+                  <li class="big-catalog-sub-menu__item"><a href="" class="big-catalog-sub-menu__link">Серия Паола</a></li>
+                  <li class="big-catalog-sub-menu__item"><a href="" class="big-catalog-sub-menu__link">Серия Авиньон</a></li>
+                  <li class="big-catalog-sub-menu__item"><a href="" class="big-catalog-sub-menu__link">Серия Венето</a></li>
+                  <li class="big-catalog-sub-menu__item"><a href="" class="big-catalog-sub-menu__link">Серия Британия</a></li>
+                  <li class="big-catalog-sub-menu__item"><a href="" class="big-catalog-sub-menu__link">Серия Милана</a></li>
+                  <li class="big-catalog-sub-menu__item"><a href="" class="big-catalog-sub-menu__link">Серия OKAERI</a></li>
+                  <li class="big-catalog-sub-menu__item"><a href="" class="big-catalog-sub-menu__link">Серия LIRONA</a></li>
+                  <li class="big-catalog-sub-menu__item"><a href="" class="big-catalog-sub-menu__link">Серия LAURA</a></li>
+                  <li class="big-catalog-sub-menu__item"><a href="" class="big-catalog-sub-menu__link">Серия Мальта</a></li>
+                  <li class="big-catalog-sub-menu__item"><a href="" class="big-catalog-sub-menu__link">Серия Бали</a></li>
+                </ul>
+              </li>
+            </ul>
+            <ul class="header__big-catalog-menu big-catalog-menu list--clear">
+              <li class="big-catalog-menu__item">
+                <a href=""
+                   class="big-catalog-menu__link">
+
+                  <svg class="big-catalog-menu__icon"
+                       width="20"
+                       height="20">
+                    <use xlink:href="img/spritemap.svg#sprite-big-catalog-menu-1"></use>
+                  </svg>
+                  Коллекции
+                </a>
+                <ul class="big-catalog-menu__sub big-catalog-sub-menu list--clear">
+                  <li class="big-catalog-sub-menu__item"><a href="" class="big-catalog-sub-menu__link">Серия Верди</a></li>
+                  <li class="big-catalog-sub-menu__item"><a href="" class="big-catalog-sub-menu__link">Серия Элбург</a></li>
+                  <li class="big-catalog-sub-menu__item"><a href="" class="big-catalog-sub-menu__link">Серия Паола</a></li>
+                  <li class="big-catalog-sub-menu__item"><a href="" class="big-catalog-sub-menu__link">Серия Авиньон</a></li>
+                  <li class="big-catalog-sub-menu__item"><a href="" class="big-catalog-sub-menu__link">Серия Венето</a></li>
+                  <li class="big-catalog-sub-menu__item"><a href="" class="big-catalog-sub-menu__link">Серия Британия</a></li>
+                  <li class="big-catalog-sub-menu__item"><a href="" class="big-catalog-sub-menu__link">Серия Милана</a></li>
+                  <li class="big-catalog-sub-menu__item"><a href="" class="big-catalog-sub-menu__link">Серия OKAERI</a></li>
+                  <li class="big-catalog-sub-menu__item"><a href="" class="big-catalog-sub-menu__link">Серия LIRONA</a></li>
+                  <li class="big-catalog-sub-menu__item"><a href="" class="big-catalog-sub-menu__link">Серия LAURA</a></li>
+                  <li class="big-catalog-sub-menu__item"><a href="" class="big-catalog-sub-menu__link">Серия Мальта</a></li>
+                  <li class="big-catalog-sub-menu__item"><a href="" class="big-catalog-sub-menu__link">Серия Бали</a></li>
+                </ul>
+              </li>
+            </ul>
+            <ul class="header__big-catalog-menu big-catalog-menu list--clear">
+              <li class="big-catalog-menu__item">
+                <a href=""
+                   class="big-catalog-menu__link">
+
+                  <svg class="big-catalog-menu__icon"
+                       width="20"
+                       height="20">
+                    <use xlink:href="img/spritemap.svg#sprite-big-catalog-menu-1"></use>
+                  </svg>
+                  Коллекции
+                </a>
+                <ul class="big-catalog-menu__sub big-catalog-sub-menu list--clear">
+                  <li class="big-catalog-sub-menu__item"><a href="" class="big-catalog-sub-menu__link">Серия Верди</a></li>
+                  <li class="big-catalog-sub-menu__item"><a href="" class="big-catalog-sub-menu__link">Серия Элбург</a></li>
+                  <li class="big-catalog-sub-menu__item"><a href="" class="big-catalog-sub-menu__link">Серия Паола</a></li>
+                  <li class="big-catalog-sub-menu__item"><a href="" class="big-catalog-sub-menu__link">Серия Авиньон</a></li>
+                  <li class="big-catalog-sub-menu__item"><a href="" class="big-catalog-sub-menu__link">Серия Венето</a></li>
+                  <li class="big-catalog-sub-menu__item"><a href="" class="big-catalog-sub-menu__link">Серия Британия</a></li>
+                  <li class="big-catalog-sub-menu__item"><a href="" class="big-catalog-sub-menu__link">Серия Милана</a></li>
+                  <li class="big-catalog-sub-menu__item"><a href="" class="big-catalog-sub-menu__link">Серия OKAERI</a></li>
+                  <li class="big-catalog-sub-menu__item"><a href="" class="big-catalog-sub-menu__link">Серия LIRONA</a></li>
+                  <li class="big-catalog-sub-menu__item"><a href="" class="big-catalog-sub-menu__link">Серия LAURA</a></li>
+                  <li class="big-catalog-sub-menu__item"><a href="" class="big-catalog-sub-menu__link">Серия Мальта</a></li>
+                  <li class="big-catalog-sub-menu__item"><a href="" class="big-catalog-sub-menu__link">Серия Бали</a></li>
+                </ul>
+              </li>
+            </ul>
+            <ul class="header__big-catalog-menu big-catalog-menu list--clear">
+              <li class="big-catalog-menu__item">
+                <a href=""
+                   class="big-catalog-menu__link">
+
+                  <svg class="big-catalog-menu__icon"
+                       width="20"
+                       height="20">
+                    <use xlink:href="img/spritemap.svg#sprite-big-catalog-menu-1"></use>
+                  </svg>
+                  Коллекции
+                </a>
+                <ul class="big-catalog-menu__sub big-catalog-sub-menu list--clear">
+                  <li class="big-catalog-sub-menu__item"><a href="" class="big-catalog-sub-menu__link">Серия Верди</a></li>
+                  <li class="big-catalog-sub-menu__item"><a href="" class="big-catalog-sub-menu__link">Серия Элбург</a></li>
+                  <li class="big-catalog-sub-menu__item"><a href="" class="big-catalog-sub-menu__link">Серия Паола</a></li>
+                  <li class="big-catalog-sub-menu__item"><a href="" class="big-catalog-sub-menu__link">Серия Авиньон</a></li>
+                  <li class="big-catalog-sub-menu__item"><a href="" class="big-catalog-sub-menu__link">Серия Венето</a></li>
+                  <li class="big-catalog-sub-menu__item"><a href="" class="big-catalog-sub-menu__link">Серия Британия</a></li>
+                  <li class="big-catalog-sub-menu__item"><a href="" class="big-catalog-sub-menu__link">Серия Милана</a></li>
+                  <li class="big-catalog-sub-menu__item"><a href="" class="big-catalog-sub-menu__link">Серия OKAERI</a></li>
+                  <li class="big-catalog-sub-menu__item"><a href="" class="big-catalog-sub-menu__link">Серия LIRONA</a></li>
+                  <li class="big-catalog-sub-menu__item"><a href="" class="big-catalog-sub-menu__link">Серия LAURA</a></li>
+                  <li class="big-catalog-sub-menu__item"><a href="" class="big-catalog-sub-menu__link">Серия Мальта</a></li>
+                  <li class="big-catalog-sub-menu__item"><a href="" class="big-catalog-sub-menu__link">Серия Бали</a></li>
+                </ul>
+              </li>
+            </ul>
+          </div>
+
 
         </nav>
       </div>
