--- a/src/html/views/index.html
+++ b/src/html/views/index.html
@@ -152,6 +152,14 @@ title: "Заголовок | Проект",
         </div>
       </a>
     </div>
+    <a href=""
+       class="popular-categories-block__more">
+      <svg class=""
+           width="16"
+           height="16">
+        <use xlink:href="img/spritemap.svg#sprite-popular-categories"></use>
+      </svg>
+      Перейти в каталог ></a>
   </section>
 
 
@@ -180,8 +188,7 @@ title: "Заголовок | Проект",
               <div class="item-product__actions">
                 <button type="button"
                         class="btn btn--fill btn--green item-product__add">
-                  <svg class="logo__image"
-                       width="18"
+                  <svg width="18"
                        height="18">
                     <use xlink:href="img/spritemap.svg#sprite-button-basket"></use>
                   </svg>
@@ -248,8 +255,7 @@ title: "Заголовок | Проект",
               <div class="item-product__actions">
                 <button type="button"
                         class="btn btn--fill btn--green item-product__add">
-                  <svg class="logo__image"
-                       width="18"
+                  <svg width="18"
                        height="18">
                     <use xlink:href="img/spritemap.svg#sprite-button-basket"></use>
                   </svg>
@@ -319,8 +325,7 @@ title: "Заголовок | Проект",
               <div class="item-product__actions">
                 <button type="button"
                         class="btn btn--fill btn--green item-product__add">
-                  <svg class="logo__image"
-                       width="18"
+                  <svg width="18"
                        height="18">
                     <use xlink:href="img/spritemap.svg#sprite-button-basket"></use>
                   </svg>
@@ -390,8 +395,7 @@ title: "Заголовок | Проект",
               <div class="item-product__actions">
                 <button type="button"
                         class="btn btn--fill btn--green item-product__add">
-                  <svg class="logo__image"
-                       width="18"
+                  <svg width="18"
                        height="18">
                     <use xlink:href="img/spritemap.svg#sprite-button-basket"></use>
                   </svg>
@@ -479,8 +483,7 @@ title: "Заголовок | Проект",
               <div class="item-product__actions">
                 <button type="button"
                         class="btn btn--fill btn--green item-product__add">
-                  <svg class="logo__image"
-                       width="18"
+                  <svg width="18"
                        height="18">
                     <use xlink:href="img/spritemap.svg#sprite-button-basket"></use>
                   </svg>
@@ -547,8 +550,7 @@ title: "Заголовок | Проект",
               <div class="item-product__actions">
                 <button type="button"
                         class="btn btn--fill btn--green item-product__add">
-                  <svg class="logo__image"
-                       width="18"
+                  <svg width="18"
                        height="18">
                     <use xlink:href="img/spritemap.svg#sprite-button-basket"></use>
                   </svg>
@@ -618,8 +620,7 @@ title: "Заголовок | Проект",
               <div class="item-product__actions">
                 <button type="button"
                         class="btn btn--fill btn--green item-product__add">
-                  <svg class="logo__image"
-                       width="18"
+                  <svg width="18"
                        height="18">
                     <use xlink:href="img/spritemap.svg#sprite-button-basket"></use>
                   </svg>
@@ -689,8 +690,7 @@ title: "Заголовок | Проект",
               <div class="item-product__actions">
                 <button type="button"
                         class="btn btn--fill btn--green item-product__add">
-                  <svg class="logo__image"
-                       width="18"
+                  <svg width="18"
                        height="18">
                     <use xlink:href="img/spritemap.svg#sprite-button-basket"></use>
                   </svg>
@@ -815,43 +815,165 @@ title: "Заголовок | Проект",
   </section>
   <section class="main-page__reviews reviews-block">
     <h2 class="reviews-block__title block__title">Отзывы</h2>
+
     <div class="reviews-block__inner">
-      <div class="reviews-block__item item-review">
-        <div class="item-review__header">
-          <a href=""
-             class="item-review__product item-product-review">
-            <div class="item-product-review__image">
-              <img src="uploads/products/1.png "
-                   alt="">
-            </div>
-            <div class="item-product-review__add">
-              <h3 class="item-product-review__title">Кровать двуспальная Лондон</h3>
-              <div class="item-product-review__prices">
-                <div class="item-product-review__price item-product-review__price--old">
-                  20 368 ₽
-                </div>
-                <div class="item-product-review__price"><span>от</span> 10 368 ₽</div>
+      <div class="swiper-container reviews-block__container">
+        <div class="swiper-wrapper reviews-block__wrapper">
+
+          <div class="swiper-slide reviews-block__slide">
+            <div class="reviews-block__item item-review">
+              <div class="item-review__header">
+                <a href=""
+                   class="item-review__product item-product-review">
+                  <div class="item-product-review__image">
+                    <img src="uploads/products/1.png "
+                         alt="">
+                  </div>
+                  <div class="item-product-review__add">
+                    <h3 class="item-product-review__title">Кровать двуспальная Лондон</h3>
+                    <div class="item-product-review__prices">
+                      <div class="item-product-review__price item-product-review__price--old">
+                        20 368 ₽
+                      </div>
+                      <div class="item-product-review__price"><span>от</span> 10 368 ₽</div>
+                    </div>
+                  </div>
+                </a>
+              </div>
+              <div class="item-review__text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer convallis nisl euismod euismod pharetra. Duis molestie egestas luctus. Donec nec efficitur quam. Morbi pellentesque euismod nisi sed laoreet. Nulla ac pulvinar lacus, id dignissim arcu. Integer aliquet arcu a dignissim mollis.
+              </div>
+              <div class="item-review__author">
+                <svg width="16"
+                     height="16">
+                  <use xlink:href="img/spritemap.svg#sprite-author"></use>
+                </svg>
+                Алексей Н.
               </div>
             </div>
-          </a>
-        </div>
-        <div class="item-review__text">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer convallis nisl euismod euismod pharetra. Duis molestie egestas luctus. Donec nec efficitur quam. Morbi pellentesque euismod nisi sed laoreet. Nulla ac pulvinar lacus, id dignissim arcu. Integer aliquet arcu a dignissim mollis.
-        </div>
-        <div class="item-review__author">
-          Алексей Н.
+          </div>
+          <div class="swiper-slide reviews-block__slide">
+            <div class="reviews-block__item item-review">
+              <div class="item-review__header">
+                <a href=""
+                   class="item-review__product item-product-review">
+                  <div class="item-product-review__image">
+                    <img src="uploads/products/1.png "
+                         alt="">
+                  </div>
+                  <div class="item-product-review__add">
+                    <h3 class="item-product-review__title">Кровать двуспальная Лондон</h3>
+                    <div class="item-product-review__prices">
+                      <div class="item-product-review__price item-product-review__price--old">
+                        20 368 ₽
+                      </div>
+                      <div class="item-product-review__price"><span>от</span> 10 368 ₽</div>
+                    </div>
+                  </div>
+                </a>
+              </div>
+              <div class="item-review__text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer convallis nisl euismod euismod pharetra. Duis molestie egestas luctus. Donec nec efficitur quam. Morbi pellentesque euismod nisi sed laoreet. Nulla ac pulvinar lacus, id dignissim arcu. Integer aliquet arcu a dignissim mollis.
+              </div>
+              <div class="item-review__author">
+                <svg width="16"
+                     height="16">
+                  <use xlink:href="img/spritemap.svg#sprite-author"></use>
+                </svg>
+                Алексей Н.
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide reviews-block__slide">
+            <div class="reviews-block__item item-review">
+              <div class="item-review__header">
+                <a href=""
+                   class="item-review__product item-product-review">
+                  <div class="item-product-review__image">
+                    <img src="uploads/products/1.png "
+                         alt="">
+                  </div>
+                  <div class="item-product-review__add">
+                    <h3 class="item-product-review__title">Кровать двуспальная Лондон</h3>
+                    <div class="item-product-review__prices">
+                      <div class="item-product-review__price item-product-review__price--old">
+                        20 368 ₽
+                      </div>
+                      <div class="item-product-review__price"><span>от</span> 10 368 ₽</div>
+                    </div>
+                  </div>
+                </a>
+              </div>
+              <div class="item-review__text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer convallis nisl euismod euismod pharetra. Duis molestie egestas luctus. Donec nec efficitur quam. Morbi pellentesque euismod nisi sed laoreet. Nulla ac pulvinar lacus, id dignissim arcu. Integer aliquet arcu a dignissim mollis.
+              </div>
+              <div class="item-review__author">
+                <svg width="16"
+                     height="16">
+                  <use xlink:href="img/spritemap.svg#sprite-author"></use>
+                </svg>
+                Алексей Н.
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide reviews-block__slide">
+            <div class="reviews-block__item item-review">
+              <div class="item-review__header">
+                <a href=""
+                   class="item-review__product item-product-review">
+                  <div class="item-product-review__image">
+                    <img src="uploads/products/1.png "
+                         alt="">
+                  </div>
+                  <div class="item-product-review__add">
+                    <h3 class="item-product-review__title">Кровать двуспальная Лондон</h3>
+                    <div class="item-product-review__prices">
+                      <div class="item-product-review__price item-product-review__price--old">
+                        20 368 ₽
+                      </div>
+                      <div class="item-product-review__price"><span>от</span> 10 368 ₽</div>
+                    </div>
+                  </div>
+                </a>
+              </div>
+              <div class="item-review__text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer convallis nisl euismod euismod pharetra. Duis molestie egestas luctus. Donec nec efficitur quam. Morbi pellentesque euismod nisi sed laoreet. Nulla ac pulvinar lacus, id dignissim arcu. Integer aliquet arcu a dignissim mollis.
+              </div>
+              <div class="item-review__author">
+                <svg width="16"
+                     height="16">
+                  <use xlink:href="img/spritemap.svg#sprite-author"></use>
+                </svg>
+                Алексей Н.
+              </div>
+            </div>
+          </div>
         </div>
       </div>
+      <div class="swiper-button-prev reviews-block__btn reviews-block__btn--prev"></div>
+      <div class="swiper-button-next reviews-block__btn reviews-block__btn--next"></div>
     </div>
+
+
     <a href=""
-       class="reviews-block__more">Отзывы ></a>
+       class="reviews-block__more">
+      <svg width="16"
+           height="16">
+        <use xlink:href="img/spritemap.svg#sprite-review"></use>
+      </svg>
+      Отзывы ></a>
   </section>
 
 
   <section class="main-page__works works-block">
     <h2 class="reviews-block__title block__title">Наши работы</h2>
     <a href=""
-       class="works-block__more">Все работы</a>
+       class="works-block__more">
+      <svg width="20"
+           height="20">
+        <use xlink:href="img/spritemap.svg#sprite-works"></use>
+      </svg>
+      Все работы ></a>
     <div class="works-block__inner">
       <a href=""
          class="works-block__item">
@@ -908,7 +1030,7 @@ title: "Заголовок | Проект",
           </button>
         </div>
         <div class="questions-form__agree">
-          Здесь согласие)))
+          Здесь согласие))) Взять из форм
         </div>
       </div>
     </div>
