--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -120,49 +120,51 @@ a {
 }
 
 .swiper-pagination-bullet {
-  display          : inline-block;
-  width            : 8px;
-  height           : 8px;
-  margin           : 0 9px;
-  vertical-align   : bottom;
-  border-radius    : 50%;
-  border: 1px solid #B3B3B3;
+  display        : inline-block;
+  width          : 8px;
+  height         : 8px;
+  margin         : 0 9px;
+  vertical-align : bottom;
+  border         : 1px solid #b3b3b3;
+  border-radius  : 50%;
 }
 
 .swiper-pagination-bullet-active {
-  box-shadow : 0 0 0 2px #000;
+  border           : none;
   background-color : #000;
-  border: none;
+  box-shadow       : 0 0 0 2px #000;
 }
+
 .swiper-button-prev,
 .swiper-button-next {
-  width: 35px;
-  height : 36px;
-  background-color: #00cc52;
-  cursor : pointer;
-  background-repeat : no-repeat;
+  position            : absolute;
+  z-index             : 999;
+  top                 : 50%;
+  width               : 35px;
+  height              : 36px;
+  margin-top          : -18px;
+  cursor              : pointer;
+  background-color    : #00cc52;
+  background-repeat   : no-repeat;
   background-position : center;
-  position : absolute;
-  top : 50%;
-  margin-top : -18px;
-  z-index : 999;
 
   &:active,
   &:focus,
   &:hover {
-    background-color: #07c353;
+    background-color : #07c353;
   }
 }
+
 .swiper-button-prev {
-  border-radius : 5px 0 0 5px;
+  left             : -50px;
+  border-radius    : 5px 0 0 5px;
   background-image : url(../img/svg/slider-arrow-left.svg);
-  left : -50px;
 }
 
 .swiper-button-next {
-  border-radius: 0 5px 5px 0;
+  right            : -50px;
+  border-radius    : 0 5px 5px 0;
   background-image : url(../img/svg/slider-arrow-right.svg);
-  right : -50px;
 }
 
 
@@ -208,12 +210,15 @@ a {
 }
 
 
-
-
 .products-slider {
   position : relative;
+
   // .products-slider__container
   &__container {
+    margin-top     : -10px;
+    margin-bottom  : -190px;
+    padding-top    : 10px;
+    padding-bottom : 190px;
   }
 
   // .products-slider__wrapper
