--- a/src/scss/includes/footer.scss
+++ b/src/scss/includes/footer.scss
@@ -30,11 +30,17 @@
 
   // .footer__phones
   &__phones {
+    margin-top : 30px;
   }
 
   // .footer__mail
   &__mail {
-    margin-top : 15px;
+    font-size   : 18px;
+    font-weight : bold;
+    line-height : 1.2222;
+    display     : inline-block;
+    margin-top  : 15px;
+    color       : #fff;
   }
 
   // .footer__dev
@@ -53,6 +59,7 @@
 
   // .footer__oferta
   &__oferta {
+    margin-top : 19px;
   }
 
   // .footer__copy
@@ -70,7 +77,7 @@
 
   // .footer__menu
   &__menu {
-    margin-top : 40px;
+    margin-top : 25px;
 
     &:first-child {
       margin-top : 0;
@@ -93,9 +100,13 @@
     font-size       : 18px;
     font-weight     : bold;
     line-height     : 1.2222;
-
     display         : block;
+    margin-top      : 9px;
     text-decoration : none;
+
+    &:first-child {
+      margin-top : 0;
+    }
 
     > span {
       color : #feb618;
@@ -125,7 +136,7 @@
   &__item {
     display       : block;
     width         : calc(100% / 4);
-    margin : 0 0 15px 0;
+    margin        : 0 0 15px 0;
     padding-right : 15px;
   }
 
@@ -142,6 +153,7 @@
 
 .footer-menu--customer {
   justify-content : space-between;
+
   .footer-menu__item {
     width : auto;
   }
