--- a/src/html/includes/pagination.html
+++ b/src/html/includes/pagination.html
@@ -1,15 +1,7 @@
 <div class="pagination-block">
-  <a href=""
-     class="pagination-block__item pagination-block__item--left">
-    <svg
-      width="12"
-      height="12">
-      <use xlink:href="img/spritemap.svg#sprite-pagination-arrow-left"></use>
-    </svg>
-  </a>
   <a
     href=""
-    class="pagination-block__item">1</a>
+    class="pagination-block__item ">1</a>
   <a
     href=""
     class="pagination-block__item">2</a>
@@ -20,14 +12,5 @@
     class="pagination-block__item">4</a>
   <a
     href=""
-    class="pagination-block__item">5</a>
-  <a
-    href=""
-    class="pagination-block__item pagination-block__item--right">
-    <svg
-      width="12"
-      height="12">
-      <use xlink:href="img/spritemap.svg#sprite-pagination-arrow-right"></use>
-    </svg>
-  </a>
+    class="pagination-block__item">></a>
 </div>
