--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -17,7 +17,7 @@
 @import 'views/index';
 @import 'views/forms';
 @import 'views/catalog';
-@import 'views/category';
+@import 'views/catalog';
 @import 'views/product';
 @import 'views/about';
 @import 'views/contacts';
