--- a/src/html/views/index.html
+++ b/src/html/views/index.html
@@ -1009,7 +1009,7 @@ title: "Заголовок | Проект",
   </section>
 
 
-  <section class="main-page__questions-form questions-form-block">
+  <section class="main-page__questions-form questions-form-block questions-form-block--wide">
     <div class="questions-form-block__inner">
       <div class="questions-form-block__info">
         <div class="questions-form-block__title">
