--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -251,3 +251,54 @@ a {
   }
 }
 
+.questions-form-block {
+  background-color    : #00cc52;
+  background-image    : url(../img/svg/questions-form.svg);
+  background-repeat   : no-repeat;
+  background-position : right bottom;
+
+  // .questions-form-block--wide
+  &--wide {
+    width       : 100vw;
+    margin-left : calc((100vw - #{$contentWidth}) / -2);
+  }
+
+
+  // .questions-form-block__inner
+  &__inner {
+    display     : flex;
+    align-items : center;
+    max-width   : $contentWidth;
+    margin      : 0 auto;
+    padding     : 35px 0;
+
+  }
+
+  // .questions-form-block__info
+  &__info {
+    max-width    : 400px;
+    margin-right : 150px;
+  }
+
+  // .questions-form-block__title
+  &__title {
+    font-size   : 30px;
+    font-weight : bold;
+    line-height : 1.2333;
+    color       : #fff;
+  }
+
+  // .questions-form-block__text
+  &__text {
+    font-family : 'Lato', sans-serif;
+    font-size   : 16px;
+    color       : rgba(255, 255, 255, 0.95);
+
+
+  }
+
+  // .questions-form-block__form
+  &__form {
+  }
+}
+
