--- a/src/scss/views/catalog.scss
+++ b/src/scss/views/catalog.scss
@@ -1,3 +1,33 @@
+.catalog {
+  // .catalog__sidebar
+  &__sidebar {
+    width        : 100%;
+    max-width    : 255px;
+    margin-right : 30px;
+  }
+
+  // .catalog__inner
+  &__inner {
+    display    : flex;
+    margin-top : 40px;
+  }
+
+  // .catalog__sorting-block
+  &__sorting-block {
+    margin : 30px 0;
+  }
+
+  // .catalog__tag-filter-block
+  &__tag-filter-block {
+  }
+
+  // .catalog__description
+  &__description {
+    margin-top : 60px;
+  }
+}
+
+
 .item-product {
   position         : relative;
   padding          : 25px 20px;
@@ -23,6 +53,10 @@
 
   // .item-product__image
   &__image {
+    display         : flex;
+    align-items     : center;
+    justify-content : center;
+    margin-bottom   : 20px;
   }
 
   // .item-product__title
@@ -198,7 +232,7 @@
 
   // .product-list__item
   &__item {
-    flex   : 0 1 calc(100% / 4 - 30px);
+    flex   : 0 1 calc(100% / 3 - 30px);
     margin : 0 15px 30px;
   }
 }
@@ -242,5 +276,212 @@
     position : absolute;
     right    : 0;
     bottom   : 0;
+  }
+}
+
+
+.sorting-block {
+  // .sorting-block__inner
+  &__inner {
+    display : flex;
+  }
+
+  // .sorting-block__item
+  &__item {
+    font-size       : 14px;
+    font-weight     : 500;
+    line-height     : 1.2142;
+    display         : flex;
+    align-items     : center;
+    margin-right    : 20px;
+    text-decoration : none;
+    color           : #161616;
+
+    > svg {
+      position    : relative;
+      margin-left : 5px;
+    }
+
+    // .sorting-block__item--active
+    &--active {
+      color : #00cc52;
+
+      > svg {
+        fill : #00cc52;
+      }
+    }
+
+    // .sorting-block__item--desc
+    &--desc {
+      > svg {
+        top       : 2px;
+        transform : rotate(180deg);
+      }
+    }
+  }
+}
+
+
+.sidebar {
+  // .sidebar__block
+  &__block {
+    margin-bottom    : 40px;
+    padding          : 20px;
+    border-radius    : 10px;
+    background-color : #f8f8f8;
+  }
+
+  // .sidebar__information
+  &__information {
+    margin-top    : 15px;
+    margin-bottom : 30px;
+  }
+
+  // .sidebar__title
+  &__title {
+    font-size     : 26px;
+    font-weight   : bold;
+    line-height   : 1.2307;
+    margin        : 0 -10px;
+    padding       : 0 10px 7px;
+    color         : #161616;
+    border-bottom : 1px solid #f1f1f1;
+
+  }
+
+  // .sidebar__catalog-menu
+  &__catalog-menu {
+    margin-top : 25px;
+  }
+}
+
+
+.catalog-information {
+  color : #161616;
+
+  // .catalog-information__title
+  &__title {
+    font-size      : 16px;
+    font-weight    : bold;
+    line-height    : 1.25;
+    display        : flex;
+    text-transform : uppercase;
+
+    > svg {
+      margin-right : 10px;
+    }
+  }
+
+  // .catalog-information__item
+  &__item {
+    font-size  : 14px;
+    margin-top : 20px;
+
+
+    &:last-child {
+      margin-bottom : 0;
+    }
+  }
+}
+
+
+.tag-filter-block {
+  font-size   : 14px;
+  line-height : 1.2142;
+
+  // .tag-filter-block__title
+  &__title {
+    font-weight  : bold;
+    display      : inline-block;
+    margin-right : 15px;
+  }
+
+  // .tag-filter-block__item
+  &__item {
+    display          : inline-block;
+    margin-bottom    : 8px;
+    margin-left      : 5px;
+    padding          : 4px 10px;
+    cursor           : pointer;
+    text-decoration  : none;
+    color            : #161616;
+    border-radius    : 4px;
+    background-color : rgba(20, 204, 0, 0.2);
+  }
+}
+
+
+.catalog-description {
+  // .catalog-description__title
+  &__title {
+    font-size   : 24px;
+    font-weight : bold;
+    line-height : 1.2083;
+    color       : #161616;
+  }
+
+  // .catalog-description__text
+  &__text {
+    font-family : 'Lato', sans-serif;
+    font-size   : 16px;
+    line-height : 1.6;
+    margin-top  : 30px;
+    color       : #454545;
+  }
+}
+
+
+.menu-catalog-sidebar {
+  // .menu-catalog-sidebar__item
+  &__item {
+    margin : 20px 0;
+  }
+
+  // .menu-catalog-sidebar__link
+  &__link {
+    font-size   : 16px;
+    font-weight : 500;
+    line-height : 1.25;
+    color       : #161616;
+    text-decoration : none;
+
+
+    // .menu-catalog-sidebar__link--active
+    &--active,
+    &:active,
+    &:focus,
+    &:hover {
+      color          : #00cc52;
+    }
+
+
+    // .menu-catalog-sidebar__link--sale
+    &--sale {
+      font-size      : 16px;
+      font-weight    : 900;
+      line-height    : 1.25;
+      text-transform : uppercase;
+      color          : #00cc52;
+    }
+  }
+
+  // .menu-catalog-sidebar__submenu
+  &__submenu {
+  }
+}
+
+
+.submenu-catalog-sidebar {
+  padding-left : 15px;
+  // .submenu-catalog-sidebar__item
+  &__item {
+  }
+
+  // .submenu-catalog-sidebar__link
+  &__link {
+    font-size   : 16px;
+    line-height : 1.25;
+    color       : #161616;
+    text-decoration : none;
   }
 }
