--- a/src/html/views/catalog.html
+++ b/src/html/views/catalog.html
@@ -18,11 +18,18 @@ title: "Заголовок | Проект",
         <ul class="sidebar__catalog-menu menu-catalog-sidebar list--clear">
           <li class="menu-catalog-sidebar__item">
             <a href=""
-               class="menu-catalog-sidebar__link">Спальные комплекты</a>
+               class="menu-catalog-sidebar__link current">Спальные комплекты
+              <svg width="9"
+                   height="11">
+                <use xlink:href="img/spritemap.svg#sprite-sorting-down"></use>
+              </svg>
+            </a>
+
             <ul class="menu-catalog-sidebar__submenu  submenu-catalog-sidebar list--clear">
               <li class="submenu-catalog-sidebar__item">
                 <a href=""
                    class="submenu-catalog-sidebar__link">Серия Верди</a>
+
               </li>
               <li class="submenu-catalog-sidebar__item">
                 <a href=""
