--- a/src/scss/views/catalog.scss
+++ b/src/scss/views/catalog.scss
@@ -1,6 +1,7 @@
 .catalog {
   // .catalog__sidebar
   &__sidebar {
+    flex         : 0 0 255px;
     width        : 100%;
     max-width    : 255px;
     margin-right : 30px;
@@ -24,6 +25,7 @@
   // .catalog__description
   &__description {
     margin-top : 60px;
+    margin-bottom : 80px;
   }
 }
 
@@ -300,6 +302,8 @@
     > svg {
       position    : relative;
       margin-left : 5px;
+      top       : 2px;
+      transform : rotate(180deg);
     }
 
     // .sorting-block__item--active
@@ -314,8 +318,8 @@
     // .sorting-block__item--desc
     &--desc {
       > svg {
-        top       : 2px;
-        transform : rotate(180deg);
+        top       : 0;
+        transform : rotate(0deg);
       }
     }
   }
@@ -439,19 +443,28 @@
 
   // .menu-catalog-sidebar__link
   &__link {
-    font-size   : 16px;
-    font-weight : 500;
-    line-height : 1.25;
-    color       : #161616;
+    font-size       : 16px;
+    font-weight     : 500;
+    line-height     : 1.25;
+    display         : flex;
+    align-items     : center;
     text-decoration : none;
+    color           : #161616;
 
+    > svg {
+      position    : relative;
+      right       : -4px;
+      flex-shrink : 0;
+      margin-left : 12px;
 
-    // .menu-catalog-sidebar__link--active
-    &--active,
+    }
+
+    // .menu-catalog-sidebar__link.current
+    &.current,
     &:active,
     &:focus,
     &:hover {
-      color          : #00cc52;
+      color : #00cc52;
     }
 
 
@@ -479,9 +492,15 @@
 
   // .submenu-catalog-sidebar__link
   &__link {
-    font-size   : 16px;
-    line-height : 1.25;
-    color       : #161616;
+    font-size       : 16px;
+    line-height     : 1.25;
     text-decoration : none;
+    color           : #161616;
+
+    &.current,
+    &:active,
+    &:hover {
+      color : #00cc52;
+    }
   }
 }
