--- a/src/scss/views/index.scss
+++ b/src/scss/views/index.scss
@@ -24,7 +24,7 @@
   &__advantages {
     width       : 100vw;
     margin-top  : 80px;
-    margin-left : calc((100vw - #{$contentWidth}) / -2);
+    margin-left : calc((100vw - #{$contentWidth} + 30px) / -2);
   }
 
   // .main-page__about
